@@ -39,6 +39,7 @@ MOD.Lang.Unit.VellionRT:SetGerman("Vellions rechter Brustschutz")
 MOD.Lang.Unit.VellionPS = KBM.Language:Add("Pestilence Spewer")
 MOD.Lang.Unit.VellionPS:SetGerman("Pestilenz-Speier")
 MOD.Lang.Unit.VellionEV = KBM.Language:Add("Vellion's Exposed Viscera")
+MOD.Lang.Unit.VellionEV:SetGerman("Vellions Entblößte Eingeweide")
 MOD.Lang.Unit.AndShort = KBM.Language:Add("Vellion")
 MOD.Lang.Unit.AndShort:SetGerman()
 MOD.Lang.Unit.AndShort:SetFrench()
