@@ -124,22 +124,31 @@ function KBMLM.SetMain_Lang()
 	KBMLM.SetGroupObject(KBM.Language.Marks, "GroupObject", "Raid Mark Related Text")
 	KBM.Language.Marks.Tank = KBM.Language:Add("Tank")
 	KBM.Language.Marks.Tank:SetFrench()
+	KBM.Language.Marks.Tank:SetGerman("Tank")
 	KBM.Language.Marks.Heal = KBM.Language:Add("Heal")
 	KBM.Language.Marks.Heal:SetFrench("Soins")
+	KBM.Language.Marks.Heal:SetGerman("Heilen")
 	KBM.Language.Marks.Damage = KBM.Language:Add("Damage")
 	KBM.Language.Marks.Damage:SetFrench("Dégats")
+	KBM.Language.Marks.Damage:SetGerman("Schaden")
 	KBM.Language.Marks.Support = KBM.Language:Add("Support")
 	KBM.Language.Marks.Support:SetFrench()
+	KBM.Language.Marks.Support:SetGerman("Unterstützung")
 	KBM.Language.Marks.Arrow = KBM.Language:Add("Arrow")
 	KBM.Language.Marks.Arrow:SetFrench("Flèche")
+	KBM.Language.Marks.Arrow:SetGerman("Pfeil")
 	KBM.Language.Marks.Skull = KBM.Language:Add("Skull")
 	KBM.Language.Marks.Skull:SetFrench("Crâne")
+	KBM.Language.Marks.Skull:SetGerman("Schädel")
 	KBM.Language.Marks.Avoid = KBM.Language:Add("Avoid")
 	KBM.Language.Marks.Avoid:SetFrench("Esquive")
+	KBM.Language.Marks.Avoid:SetGerman("Vermeiden")
 	KBM.Language.Marks.Smile = KBM.Language:Add("Smile")
 	KBM.Language.Marks.Smile:SetFrench("Sourire")
+	KBM.Language.Marks.Smile:SetGerman("Lächeln")
 	KBM.Language.Marks.Squirrel = KBM.Language:Add("Squirrel")
 	KBM.Language.Marks.Squirrel:SetFrench("Écureuil")
+	KBM.Language.Marks.Squirrel:SetGerman("Eichhörnchen")
 	
 	-- Version Info
 	KBM.Language.Version = {}
